# currency_bot

./: .env.example  .env.test  .gitignore  ALERT_STORAGE_GUIDE.md  ALERT_STORAGE_IMPLEMENTATION.md  API_CLIENT_GUIDE.md  API_CLIENT_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LOCALIZATION_GUIDE.md  README.md  api_client.py  config.py  constants.py  database.py  database_alerts.py  handlers.py  localization.py  main.py  pyproject.toml  requirements.txt  scheduler.py
locales/: en.json  ru.json
utils/: helpers.py  localization_helpers.py  logger.py
